v1.1.0
---

* Renamed pat_files to patterns.tsv.
* Implemented multi-library analysis.
* Divided log by library.

v1.0.1
===

* Updated global centrality script with debug mode, optional intermediate ranking and fixed global centrality option.
* Counting UMI duplicates during strict deduplication step.
* Optimized read quality filter memory usage.
* Fixed bed file creation: multiple pipeline run would append new bed files to old ones.
* Change summary update method to avoid creationg of broken lines.

v1.0.0
===

Released on 20170329 after extensive usage from external user.

* Now using getopt in main.sh.
* Moved code to `bin` subfolder.
* Moved output conditions into `conditions` subfolder.
* Moved output plots into `plots` subfolder.
* Added auxillary intermediate data `aux` subfolder.
* Added counts of reads filtered from SAM in the summary.
* Optimized and fixed reads_trim.sh script.
* Modularized main.sh script.
* Moved scripts to separate folder.
* Fixed rmX/rmY option report.
* Command line saved in aux/CMD file.
* Filter X/Y chromosomes during SAM filter step.
* Keep MAPQ level in SAM filter output.
* Log the SAM filter step.
* Optimized pos2cutsite script by calculating distance only from the 2 closest cutsite.
* Log the UMI preparation step.
* Produce properly formatted bed files per condition.
* Moved bed creation to separate script.
* Added header line to bed file.
* Moved barcode sequence option to pat_files.
* Added global centrality script.
* Added cumulative of ratio and ratio of cumulative approaches to global centrality script.

v0.1.0
===

Released on 20170313.